<resources>
    <string name="app_name">Navig</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">ВОЙТИ</string>
    <string name="user_name">Логин</string>
    <string name="password">Пароль</string>

    <string name="menu_log">Вход</string>
    <string name="menu_news">Новости</string>
    <string name="menu_program">О Программе</string>
    <string name="menu_tech">Техподдержка</string>
    <string name="home_second">Home Second</string>

    <string name="schedule">График работы</string>
    <string name="week">(Пн-Пт с 8:00 до 18:00)</string>
    <string name="contactInfo">Контактная информация</string>
    <string name="phone">+996 556 92–12–00</string>
    <string name="email">admin@kvant.online</string>
    <string name="backCall">заказать обратный звонок</string>
    <string name="userTool">Руководство пользователя</string>
    <string name="userTool2">мобильного приложения</string>
    <string name="download"><a href="http://www.google.com">скачать</a></string>
    <string name="infoForReg">Подробная информация о регистрации в</string>
    <string name="infoForReg2">АСКУЭ "Квант-Энерго" находится здесь</string>
</resources>
