<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.tech.TechFragment">

    <TextView
        android:id="@+id/text_tech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/schedule"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/week"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/contactInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:baselineAligned="false"
        android:text="@string/contactInfo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autoLink="phone"
        android:text="@string/phone"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autoLink="email"
        android:text="@string/email"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/backCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/backCall"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/userTool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:baselineAligned="false"
        android:text="@string/userTool"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userTool2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:baselineAligned="false"
        android:text="@string/userTool2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/download"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/infoForReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/infoForReg"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/infoForReg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/infoForReg2"
        android:textSize="15sp"/>

</LinearLayout>