<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="220dp"
        android:hint="@string/user_name"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:text="@string/login" />


</LinearLayout>